// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepoSearch renders correctly with all repos 1`] = `
<div
  className="repo-search"
>
  <label
    htmlFor="search"
  >
    Username
  </label>
  <input
    className="input"
    defaultValue="hannupekka"
    type="text"
  />
  <button
    className="button"
    onClick={[Function]}
  >
    Get users repositories 
    <i
      className="fa fa-search"
    />
  </button>
  <button
    className="button"
    onClick={[Function]}
  >
    Hide forks
     
    <i
      className="fa fa-filter"
    />
  </button>
  <div
    className="repo-list"
  >
    <a
      href="https://github.com/hannupekka/fressi-gym-activity"
      rel="noopener noreferrer"
      target="_blank"
      title="author: hannupekka"
    >
      fressi-gym-activity
    </a>
    <a
      href="https://github.com/hannupekka/heroku-buildpack-python-libffi"
      rel="noopener noreferrer"
      target="_blank"
      title="author: hannupekka"
    >
      heroku-buildpack-python-libffi
    </a>
  </div>
</div>
`;

exports[`RepoSearch renders correctly with empty data 1`] = `
<div
  className="repo-search"
>
  <label
    htmlFor="search"
  >
    Username
  </label>
  <input
    className="input"
    defaultValue="hannupekka"
    type="text"
  />
  <button
    className="button"
    onClick={[Function]}
  >
    Get users repositories 
    <i
      className="fa fa-search"
    />
  </button>
  <div
    className="repo-list"
  />
</div>
`;

exports[`RepoSearch renders correctly with error 1`] = `
<div
  className="repo-search"
>
  <div
    className="error"
  >
    Repositories not found!
  </div>
  <label
    htmlFor="search"
  >
    Username
  </label>
  <input
    className="input"
    defaultValue="hannupekka"
    type="text"
  />
  <button
    className="button"
    onClick={[Function]}
  >
    Get users repositories 
    <i
      className="fa fa-search"
    />
  </button>
  <div
    className="repo-list"
  />
</div>
`;

exports[`RepoSearch renders correctly with forks hidden 1`] = `
<div
  className="repo-search"
>
  <label
    htmlFor="search"
  >
    Username
  </label>
  <input
    className="input"
    defaultValue="hannupekka"
    type="text"
  />
  <button
    className="button"
    onClick={[Function]}
  >
    Get users repositories 
    <i
      className="fa fa-search"
    />
  </button>
  <button
    className="button"
    onClick={[Function]}
  >
    Include forks
     
    <i
      className="fa fa-filter"
    />
  </button>
  <div
    className="repo-list"
  >
    <a
      href="https://github.com/hannupekka/fressi-gym-activity"
      rel="noopener noreferrer"
      target="_blank"
      title="author: hannupekka"
    >
      fressi-gym-activity
    </a>
  </div>
</div>
`;

exports[`RepoSearch renders correctly with loader 1`] = `
<div
  className="repo-search"
>
  <label
    htmlFor="search"
  >
    Username
  </label>
  <input
    className="input"
    defaultValue="hannupekka"
    type="text"
  />
  <button
    className="button"
    onClick={[Function]}
  >
    Get users repositories 
    <i
      className="fa fa-search"
    />
  </button>
  <div>
    <div
      className="spinner"
    />
    <div
      className="text"
    >
      Loading
    </div>
  </div>
  <div
    className="repo-list"
  />
</div>
`;
